minor tweaks for demo

--- a/example/WebContent/findOwners.html
+++ b/example/WebContent/findOwners.html
@@ -80,7 +80,7 @@
 					<br> <a class="btn btn-default"
 						href="editOwner.html">Add Owner</a>
 				</div>
-				<div id="found" style="display: none">
+				<div id="found">
 					<h2>Owners</h2>
 
 					<table data-table="owners" data-has-children="true" data-hide-if-no-data="true" id="owners" class="table table-striped">
@@ -94,8 +94,8 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr data-row="owners" id="owners__i__" style="display: none">
-								<td><a href="javascript:showOwner(__ownerId__);">__firstName__&nbsp;__lastName__</a>
+							<tr data-row="owners" id="owners__i__">
+								<td><a href="ownerDetails.html?__ownerId__">__firstName__&nbsp;__lastName__</a>
 								</td>
 								<td>__address__</td>
 								<td>__city__</td>
