--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -1,4 +1,4 @@
-<div style="width: 100%; padding: 10px 10px 10px 10px;">
+<div style="width: 100%;background-color: #ceb282; padding: 10px 10px 10px 10px;">
 	<h3 style="display: inline;">Submissions</h3>
 	&nbsp;&nbsp;&nbsp;<i>(Select the row to view or edit)</i>
 	<hr>
