--- a/examples/helloworld/src/main/webapp/index.html
+++ b/examples/helloworld/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 <script type="text/javascript">
 Simplity.getResponse("helloworld",null,onSuccess,onError);
 function onSuccess(response){
-	document.getElementById("hellotag").innerHTML = response.hello;
+	document.getElementById("hellotag").innerHTML = JSON.stringify(response);
 }
 function onError(response){
 	console.log(response);
