--- a/examples/helloworld/src/main/webapp/index.html
+++ b/examples/helloworld/src/main/webapp/index.html
@@ -5,16 +5,16 @@
 <title>Simplity Hello World</title>
 </head>
 <body>
-<div id="hellotag"></div>
-
+<div id="response"></div>
 <button onclick="callRest()">Invoke Rest Call</button>
 <button onclick="callFile()">Invoke File Processor</button>
+<button onclick="callFilter()">Invoke DB Lookup</button>
 </body>
 <script src="js/simplity-min.js"></script>
 <script type="text/javascript">
 Simplity.getResponse("helloworld",null,onSuccess,onError);
 function onSuccess(response){
-	document.getElementById("hellotag").innerHTML = JSON.stringify(response);
+	document.getElementById("response").innerHTML = JSON.stringify(response);
 }
 function onError(response){
 	console.log(response);
@@ -25,6 +25,9 @@ function callRest(){
 }
 function callFile(){
 	Simplity.getResponse("fileProcessing",null,onSuccess,onError);
+}
+function callFilter(){
+	Simplity.getResponse("filter_customer",null,onSuccess,onError);
 }
 </script>
 </html>
