throw error if service dbaccesstype wrongly configured

--- a/examples/helloworld/src/main/webapp/index.html
+++ b/examples/helloworld/src/main/webapp/index.html
@@ -51,7 +51,7 @@ function callCustomer(){
 
 function callSQL(){
 	var data = "{'custCode':'C00013'}"
-	Simplity.getResponse("callSqlqueryCust",data,onSuccess,onError);
+	Simplity.getResponse("callSqlHw",data,onSuccess,onError);
 }
 function invokeCustomServlet(){
 	var xhttp = new XMLHttpRequest();
