helloworld example modified

--- a/examples/helloworld/src/main/webapp/index.html
+++ b/examples/helloworld/src/main/webapp/index.html
@@ -63,5 +63,10 @@ function invokeCustomServlet(){
 	xhttp.open("GET", "\processFile", true);
 	xhttp.send();
 }
+
+function onError(response){
+	console.log(response);
+	
+}
 </script>
 </html>
