restful maturity model implementation - see Readme

--- a/examples/helloworld/src/main/webapp/index.html
+++ b/examples/helloworld/src/main/webapp/index.html
@@ -36,7 +36,7 @@ function onError(response){
 }
 
 function callRest(){
-	Simplity.getResponse("rest.callAnotherService",null,onSuccess,onError);
+	Simplity.getResponse("restService.callAnotherService",null,onSuccess,onError);
 }
 function callFile(){
 	Simplity.getResponse("fileactions.fileProcessing",null,onSuccess,onError);
