--- a/examples/helloworld/src/main/webapp/index.html
+++ b/examples/helloworld/src/main/webapp/index.html
@@ -59,6 +59,7 @@
 	<br>
 	<button onClick="login()">Login</button>
 	<br>
+	<br>
 	<button onclick="sendMail()">Send Mail</button>
 	<br>
 	<br>
@@ -158,12 +159,12 @@
 	}
 	
 	function sendMail() {
-		var value = document.getElementById("message").value
-		var data = "{'fromId':'" + value 
-			+ ", 'toIds':'" + value
-			+ ", 'content':'" + value
-			+ ", 'subject':'" + value
-			+ "'}"
+		//var value = document.getElementById("message").value
+		//var data = "{'fromId':'" + value 
+		//	+ ", 'toIds':'" + value
+		//	+ ", 'content':'" + value
+		//	+ ", 'subject':'" + value
+		//	+ "'}"
 		Simplity.getResponse("mailService.sendMail", null, onSendMailSuccess, onSendMailError);
 	}
 	
